force-app/main/default/objects/KimbleOne__StatusSummaryTemplate__c/KimbleOne__StatusSummaryTemplate__c.object-meta.xml
<CustomObject>
    <label>Status Summary Template</label>
    <nameField>
        <label>Status Summary Template  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Summary Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>