force-app/main/default/objects/KimbleOne__StatusSummaryTemplate__c/fields/KimbleOne__DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryStatus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Status</label>
    <referenceTo>KimbleOne__DeliveryStatus__c</referenceTo>
    <relationshipLabel>Status Summary Templates</relationshipLabel>
    <relationshipName>StatusSummaryTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>