force-app/main/default/objects/KimbleOne__StatusSummaryTemplate__c/fields/KimbleOne__Narrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Narrative__c</fullName>
    <label>Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>